03-metrics/00-metrics-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-metrics
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`metrics.senatorkube.com`) || PathPrefix(`/metrics`)
      services:
        - name: prometheus@internal
          kind: TraefikService
