03-metrics/00-prometheus-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:                      # [1]
    - web
  routes:                           # [2]
  - kind: Rule
    match: Host(`prometheus.senatorkube.com`) # [3]
    services:                       # [8]
    - kind: Service
      name: prometheus-stack-kube-prom-prometheus
      namespace: monitoring
      port: 9090
