03-metrics/03-grafana-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`grafana.senatorkube.com`)
      services:
        - name: prometheus-stack-grafana
          kind: Service
          namespace: monitoring
          port: 80
